Added multi-threading to the NeuralLayer class. Refactoring of the project was also done.

--- a/NeuronTests/NeuralNetworkTests.csproj
+++ b/NeuronTests/NeuralNetworkTests.csproj
@@ -16,13 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Neuron\Neuron.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="heart.csv">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <ProjectReference Include="..\Neuron\NeuralNetwork.csproj" />
   </ItemGroup>
 
 </Project>
